--- a/boopcss.css
+++ b/boopcss.css
@@ -6,3 +6,14 @@ body{
 header{
     text-align: center;
 }
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:100vh;
+}
+
+img{
+    width:15%;
+}
